--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,141 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+ 
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    /* --background:linear-gradient(to right, #00082e, #001b44, #032a5b, #043a74, #004b8d); */
+    --background:black;
+    --foreground: 222.2 84% 4.9%;
+    --font-primary: rgba(255, 255, 255, 0.7);
+    --card: transparent;
+    --card-foreground: white;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+ 
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: rgb(4, 196, 224);
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+ 
+    --radius: 0.5rem;
+  }
+  /* .gradient-background {
+    background: linear-gradient(to right, #00082e, #001b44, #032a5b, #043a74, #004b8d);
+    
+  } */
+
+  .gradient-background {
+    background: linear-gradient(to right, #00082E, #004A8C  );
+  }
+  .secondaryBoxShadow  {
+    box-shadow: 1px 1px 2px #ffffffcb;
+  }
+  .blur-border {
+    width: 200px;
+    height: 200px;
+    border: none; 
+    box-shadow: 0 0 3px #ffffffcb;
+  }
+  .dark {
+    --background:white;
+    --foreground: 210 40% 98%;
+ 
+    --card: 222.2 84% 4.9%;
+    --card-foreground: white;
+ 
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+ 
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+ 
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+ 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+ 
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+ 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+ 
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: #7dafff;
   }
 }
+.primaryTextH4 { 
+  color: var(--font-primary);
+  font-size:12px;
+  font-weight:700
+}
+.primaryTextH3 {
+  font-size:12px;
+  font-weight:500
+}
+.primaryTextP {
+  color: var(--font-primary);
+  font-size: 10px;
+  font-weight:400
+}
+.secondaryTextP {
+  color: var(--secondary-foreground);
+  font-size: 10px;
+  text-align: center;
+  line-height: 1;
+}
+ @media screen and (min-width: 500px) {
+  .primaryTextH4 { 
+    color: var(--font-primary);
+    font-size:18px;
+    font-weight:700
+  }
+  .blur-border {
+    
+    border: 1px solid transparent;
+    box-shadow: 0 0 3px #ffffffcb;
+  }
+  .primaryTextH3 {
+    color: white;
+    font-size:18px;
+    font-weight:600
+  }
+  .primaryTextP {
+    color: var(--font-primary);
+    font-size: 14px;
+    font-weight:400
+  }
+  .secondaryTextP {
+    color: var(--secondary-foreground);
+    font-size: 12px;
+    text-align: center;
+    line-height: 1;
+  }
+ }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+  }
+    /* body {
+      @apply bg-background text-foreground;
+    } */
 }
